# non-identifiability

./: .gitignore  README.md  pyproject.toml
config/: config.yml  prompts.json  style.yaml
src/: __init__.py
src/experiments/: alpha_sweep.py  logit_distance_equivalence_test.py  multi_environment_validation.py  nullspace_dimensionality.py  nullspace_spanning.py  persona_vector_experiment.py  test_orthogonal.py  test_vector_equivalence.py
src/visualize/: generate_figures.py
